--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-446.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-364.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-480.3KB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-407.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-350.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-555.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-711.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-614.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-543.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.12MB/s(Youtube:不良林), server: hk-hkg-sh-hk-02-tr.cdn.savoy.click, port: 21089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-sh-hk-02-tr.cdn.savoy.click, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-555.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-711.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-614.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
