--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,16 +5,16 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-407.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-364.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-543.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-191.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-314.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2, server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2, server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-181.6KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇯🇵 日本-3.20MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-476.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇯🇵 日本-736.5KB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.67MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-181.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-736.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
